--- a/rdf-forge/rdf-forge-ui/src/styles.scss
+++ b/rdf-forge/rdf-forge-ui/src/styles.scss
@@ -435,6 +435,42 @@ $swiss-border: #d5d5d5;
   }
 }
 
+// Notification Styles
+.notification-success {
+  --mdc-snackbar-container-color: #4caf50;
+  --mdc-snackbar-supporting-text-color: white;
+  --mat-snack-bar-button-color: white;
+}
+
+.notification-error {
+  --mdc-snackbar-container-color: #f44336;
+  --mdc-snackbar-supporting-text-color: white;
+  --mat-snack-bar-button-color: white;
+}
+
+.notification-warning {
+  --mdc-snackbar-container-color: #ff9800;
+  --mdc-snackbar-supporting-text-color: white;
+  --mat-snack-bar-button-color: white;
+}
+
+.notification-info {
+  --mdc-snackbar-container-color: #2196f3;
+  --mdc-snackbar-supporting-text-color: white;
+  --mat-snack-bar-button-color: white;
+}
+
+.notification-loading {
+  --mdc-snackbar-container-color: #424242;
+  --mdc-snackbar-supporting-text-color: white;
+}
+
+.error-snackbar {
+  --mdc-snackbar-container-color: #f44336;
+  --mdc-snackbar-supporting-text-color: white;
+  --mat-snack-bar-button-color: white;
+}
+
 // Dark Theme Support (Refined)
 .dark-theme {
   --text-color: #f3f4f6;
